k8s/tezos-public-node-stateful-set.yaml
apiVersion: v1
kind: Service
metadata:
  name: tezos-public-node
spec:
  ports:
  - port: 9732
  selector:
    app: tezos-public-node
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: tezos-public-node-rpc
spec:
  ports:
  - port: 8732
  selector:
    app: tezos-public-node
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tezos-public-node
spec:
  selector:
    matchLabels:
      app: tezos-public-node # Label selector that determines which Pods belong to the StatefulSet
                 # Must match spec: template: metadata: labels
  serviceName: "tezos-public-node"
  replicas: 2
  template:
    metadata:
      labels:
        app: tezos-public-node # Pod template's label selector
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-public-node
        image: tezos-public-node-with-probes
        args: [ "tezos-node", "--history-mode", "experimental-rolling", "--peer", "tezos-private-baking-node" ]
        ports:
        - containerPort: 9732
          name: tezos-port
        volumeMounts:
        - name: tezos-public-node-pv-claim
          mountPath: /var/run/tezos/node
        resources:
          limits:
            cpu: 0
        livenessProbe:
          # pod is considered dead when number of connections drops to one
          exec:
            command:
            - /usr/local/bin/does-tezos-node-have-connections.sh
          periodSeconds: 10
          failureThreshold: 50
  volumeClaimTemplates:
  - metadata:
      name: tezos-public-node-pv-claim
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-ssd
      resources:
        requests:
          storage: 30Gi
