k8s/tezos-private-node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tezos-private-baking-node
spec:
  ports:
  - port: 9732
    name: p2p
  - port: 9489
    name: metrics
  selector:
    app: tezos-private-baking-node
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tezos-private-baking-node-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: tezos-private-baking-node
  policyTypes:
  - Ingress
  - Egress
  egress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 8445
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: tezos-remote-signer-forwarder
  - ports:
    - port: 9732
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: tezos-public-node
  ingress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - ports:
    - port: 9732
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: tezos-public-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tezos-private-baking-node
spec:
  selector:
    matchLabels:
      app: tezos-private-baking-node
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tezos-private-baking-node
    spec:
      securityContext:
        fsGroup: 100
      containers:
      - name: tezos-private-node
        image: tezos/tezos
        args: [ "tezos-node" ]
        ports:
        - containerPort: 9732
          name: tezos-port
        - containerPort: 8732
          name: tezos-rpc-port
        volumeMounts:
        - name: tezos-private-node-storage
          mountPath: /var/run/tezos/node
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      - name: tezos-prometheus-exporter
        image: ecadlabs/tezos_exporter
        args: [ "-tezos-node-url", "http://localhost:8732/" ]
        ports:
        - containerPort: 9489
          name: metrics
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      - name: tezos-endorser-with-remote-signer
        image: tezos-endorser-with-remote-signer
        args: [ "k8s-baker" ]
        volumeMounts:
        - name: tezos-private-node-storage
          readOnly: true
          mountPath: /var/run/tezos/node
        - name: tezos-private-client-storage
          mountPath: /var/run/tezos/client
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      - name: tezos-accuser
        image: tezos/tezos
        args: [ "tezos-accuser" ]
        volumeMounts:
        - name: tezos-private-client-storage
          readOnly: true
          mountPath: /var/run/tezos/client
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      - name: tezos-baker-with-remote-signer
        image: tezos-baker-with-remote-signer
        args: [ "k8s-baker" ]
        volumeMounts:
        - name: tezos-private-node-storage
          readOnly: true
          mountPath: /var/run/tezos/node
        - name: tezos-private-client-storage
          mountPath: /var/run/tezos/client
        resources:
          limits:
            cpu: 0
        imagePullPolicy: Always
      volumes:
      - name: tezos-private-client-storage
        persistentVolumeClaim:
          claimName: tezos-private-client-claim
      - name: tezos-private-node-storage
        persistentVolumeClaim:
          claimName: tezos-private-node-claim
